k8s/crowdsec/bouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-bouncer
  namespace: crowdsec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-bouncer
  template:
    metadata:
      labels:
        app: envoy-bouncer
    spec:
      containers:
        - name: bouncer
          image: msabban/envoy-proxy-crowdsec-bouncer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-bouncer
  namespace: crowdsec
spec:
  ports:
    - port: 8081
      targetPort: 8080
      name: grpc
  selector:
    app: envoy-bouncer
